--- a/Analysis Plan.ipynb
+++ b/Analysis Plan.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Clean the turnstile data:\n",
     "   \n",
-    "* Scrape and combine one year's worth of data files into one .svg\n",
+    "* Scrape and combine one year's worth of data files into one .csv\n",
     "* See if there any nulls\n",
     "* See if the station names have errors\n",
     "* See if there any outliers(?)\n",
@@ -36,6 +36,7 @@
     "### Additional datasets analyses to consider:\n",
     "* Tech company office locations by stations\n",
     "* University locations by stations\n",
+    "* Density of young professionals\n",
     "* Gender variance (maybe)\n",
     "\n",
     "Use learnings from above to determine final recommendations\n"
