Updated analysis plan

--- a/Analysis Plan.ipynb
+++ b/Analysis Plan.ipynb
@@ -29,8 +29,9 @@
     "### EDA on subset of data:\n",
     "* **[Bar chart]** Total traffic disaggregated by month for top 20 stations (bar charts)\n",
     "* Descriptive statistics for \"Traffic\" in top 20 stations (mean, median, mode, etc) over\n",
-    "    * Aggregated by day\n",
-    "    * Disaggregted by 4 hour intervals\n",
+    "    * Aggregated by days\n",
+    "    * Disaggregated by 3 hour intervals\n",
+    "    * Disaggregated by month\n",
     "\n",
     "\n",
     "### Additional datasets analyses to consider:\n",
