Updated data analysis plan

--- a/Analysis Plan.ipynb
+++ b/Analysis Plan.ipynb
@@ -40,7 +40,9 @@
     "* Density of young professionals\n",
     "* Gender variance (maybe)\n",
     "\n",
-    "Use learnings from above to determine final recommendations\n"
+    "Use learnings from above to determine final recommendations\n",
+    "\n",
+    "0\n"
    ]
   },
   {
