Update with Tahmid's work on MTA data

--- a/Analysis Plan.ipynb
+++ b/Analysis Plan.ipynb
@@ -8,18 +8,19 @@
     "\n",
     "### Clean the turnstile data:\n",
     "   \n",
-    "* Scrape and combine one year's worth of data files into one .csv\n",
-    "* See if there any nulls\n",
-    "* See if the station names have errors\n",
+    "* Scrape and combine one year's worth of data files into one .csv - *DONE*\n",
+    "* See if there any nulls - *DONE*\n",
+    "* See if the station names have errors - *DONE*\n",
+    "* See if Entries and Exits data needs cleaning - *DONE*\n",
     "* See if there any outliers(?)\n",
     "    \n",
     "    \n",
     "### EDA of whole dataset / Choose a subset of the data:\n",
     "* Traffic = Entries + Exits\n",
-    "* Descriptive stats for Entries, Exits, and Traffic\n",
-    "* **[Table] [HBar]** Stations with maximum traffic   \n",
+    "* Descriptive stats for Entries, Exits, and Traffic - *DONE*\n",
+    "* **[Table] [HBar]** Stations with maximum traffic\n",
     "    * Timeframe:\n",
-    "        * 1) aggregated over the year\n",
+    "        * 1) aggregated over the year - *DONE*\n",
     "        * 2) dissagregated by month(?) --> are there any outliers?\n",
     "* **[Scatter]** Entries vs. Exits by station\n",
     "    * Timeframe: aggregated over the year\n",
@@ -41,8 +42,7 @@
     "* Gender variance (maybe)\n",
     "\n",
     "Use learnings from above to determine final recommendations\n",
-    "\n",
-    "0\n"
+    "\n"
    ]
   },
   {
