Update to Analysis Plan

--- a/Analysis Plan.ipynb
+++ b/Analysis Plan.ipynb
@@ -12,34 +12,36 @@
     "* See if there any nulls - *DONE*\n",
     "* See if the station names have errors - *DONE*\n",
     "* See if Entries and Exits data needs cleaning - *DONE*\n",
+    "* Take difference between rows of data\n",
     "* See if there any outliers(?)\n",
     "    \n",
     "    \n",
     "### EDA of whole dataset / Choose a subset of the data:\n",
-    "* Traffic = Entries + Exits\n",
+    "* *Traffic = Entries + Exits*\n",
     "* Descriptive stats for Entries, Exits, and Traffic - *DONE*\n",
     "* **[Table] [HBar]** Stations with maximum traffic\n",
     "    * Timeframe:\n",
-    "        * 1) aggregated over the year - *DONE*\n",
-    "        * 2) dissagregated by month(?) --> are there any outliers?\n",
-    "* **[Scatter]** Entries vs. Exits by station\n",
-    "    * Timeframe: aggregated over the year\n",
+    "        * 1) aggregated over 2 years\n",
+    "        * 2) dissagregated by month --> any variance between months?\n",
     "* Narrow down to 20 stations\n",
     "\n",
     "\n",
     "### EDA on subset of data:\n",
     "* **[Bar chart]** Total traffic disaggregated by month for top 20 stations (bar charts)\n",
     "* Descriptive statistics for \"Traffic\" in top 20 stations (mean, median, mode, etc) over\n",
-    "    * Aggregated by days\n",
-    "    * Disaggregated by 3 hour intervals\n",
-    "    * Disaggregated by month\n",
-    "\n",
+    "    * **[Boxplot?]** Aggregated over 2 years\n",
+    "    * **[Barplot]** Disaggregated by month (already done above)\n",
+    "    * **[Barplot]** Disaggregated by 3 hour intervals\n",
+    "* **[Scatter]** Entries vs. Exits by station\n",
+    "    * Timeframe: aggregated over the year --> only needed for notebook, not presentation\n",
     "\n",
     "### Additional datasets analyses to consider:\n",
+    "* Subway entrances GeoJSON from MTA open data\n",
     "* Tech company office locations by stations\n",
     "* University locations by stations\n",
     "* Density of young professionals\n",
     "* Gender variance (maybe)\n",
+    "* NYC Census data (maybe)\n",
     "\n",
     "Use learnings from above to determine final recommendations\n",
     "\n"
