Updated Analysis Plan

--- a/Analysis Plan.ipynb
+++ b/Analysis Plan.ipynb
@@ -34,6 +34,7 @@
     "    * **[Barplot]** Disaggregated by 3 hour intervals\n",
     "* **[Scatter]** Entries vs. Exits by station\n",
     "    * Timeframe: aggregated over the year --> only needed for notebook, not presentation\n",
+    "* Some sort of Heatmap?\n",
     "\n",
     "### Additional datasets analyses to consider:\n",
     "* Subway entrances GeoJSON from MTA open data\n",
